[package]
name = "rhorizons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
