[package]
name = "rhorizons"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.32"

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
