[package]
name = "rhorizons"
description = "Access NASA JPL Horizons system. Get Solar System bodies, their positions and velocities."
categories = ["aerospace"]
keywords = ["nasa", "horizons", "solarsystem"]
license = "MIT"
repository = "https://github.com/podusowski/rhorizons"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["time"] }
uom = { version = "0.35.0", optional = true}

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

[features]
si = ["dep:uom"]